test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/subscript_both_pointers.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 10
                      None: 
                    None: 
                  Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: ptr
                  CSingleInit: 
                    CAddrOf: 
                      CVar: 
                        TIdentifier: x
                        None: 
                      None: 
                    None: 
                  Pointer: 
                    Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: subscript
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Pointer: 
                    Int: 
                  None: 
            CS: 
              CReturn: 
                CSubscript: 
                  CVar: 
                    TIdentifier: ptr
                    None: 
                  CVar: 
                    TIdentifier: subscript
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
